--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -15,11 +15,16 @@
 @for (var i = 0; i < bundleItems.Length; i++)
 {
     var item = bundleItems[i];
+    var disabledClass = item.Enabled ? string.Empty : " cart-item-disabled";
 
-    <div class="cart-row cart-row-child">
+    <div class="cart-row cart-row-child" data-key="@item.Id" data-parent-key="@item.BundleItem.ParentItemId">
         <div class="row">
+            <div sm-if="parentModel.AllowCartItemsToBeDisabled && parentModel.IsEditable" class="cart-item-enabled col-auto invisible">
+                <input type="checkbox" class="form-check-input cart-item-enabled-checkbox" />
+            </div>
+
             @* Spacer for image *@
-            <div class="cart-item-img col-3 d-none d-md-flex d-lg-none d-xl-flex text-start">
+            <div class="cart-item-img col-3 d-md-flex d-lg-none d-xl-flex text-start@(disabledClass)">
                 @if (i == 0 && item.BundleItem.Title.HasValue())
                 {
                     <span class="fwm pt-1">@(item.BundleItem.Title):</span>
@@ -29,7 +34,7 @@
                     <span>&nbsp;</span>
                 }
             </div>
-            <div class="cart-item-data col">
+            <div class="cart-item-data col@(disabledClass)">
                 @* Title & Description *@
                 <div class="cart-item-group">
                     <div class="cart-item-title">
