--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -11,15 +11,19 @@
 
 @foreach (var item in Model.Items)
 {
-    <div class="cart-row">
+    var disabledClass = item.Enabled ? string.Empty : " cart-item-disabled";
+    <div class="cart-row" data-key="@item.Id" data-parent-key="@item.Id">
         <div class="row">
+            <div sm-if="Model.AllowCartItemsToBeDisabled && Model.IsEditable" class="cart-item-enabled col-auto">
+                <input name="CartItemEnabled@(item.Id)" type="checkbox" class="form-check-input cart-item-enabled-checkbox" attr-checked='(item.Enabled, "checked")' />
+            </div>
             @* Image *@
-            <div class="cart-item-img col-3" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()">
+            <div class="cart-item-img col-3@(disabledClass)" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()">
                 <img sm-model="item.Image" class="img-fluid" />
             </div>
 
             @* Data *@
-            <div class="cart-item-data col">
+            <div class="cart-item-data col@(disabledClass)">
                 <partial name="CartItem.Details" model="item" view-data="parentViewData" />
 
                 @* User Agreement & ESD *@
