--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -19,8 +19,8 @@
 
     <div class="cart-row cart-row-child" data-key="@item.Id" data-parent-key="@item.BundleItem.ParentItemId">
         <div class="row">
-            <div sm-if="parentModel.AllowCartItemsToBeDisabled && parentModel.IsEditable" class="cart-item-enabled col-auto invisible">
-                <input type="checkbox" class="form-check-input cart-item-enabled-checkbox" />
+            <div sm-if="parentModel.AllowCartItemsToBeDisabled && parentModel.IsEditable" class="select-cart-item col-auto invisible">
+                <input type="checkbox" class="form-check-input select-cart-item-checkbox" />
             </div>
 
             @* Spacer for image *@
