--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -14,8 +14,8 @@
     var disabledClass = item.Enabled ? string.Empty : " cart-item-disabled";
     <div class="cart-row" data-key="@item.Id" data-parent-key="@item.Id">
         <div class="row">
-            <div sm-if="Model.AllowCartItemsToBeDisabled && Model.IsEditable" class="cart-item-enabled col-auto">
-                <input name="CartItemEnabled@(item.Id)" type="checkbox" class="form-check-input cart-item-enabled-checkbox" attr-checked='(item.Enabled, "checked")' />
+            <div sm-if="Model.AllowCartItemsToBeDisabled && Model.IsEditable" class="select-cart-item col-auto">
+                <input name="SelectCartItem@(item.Id)" type="checkbox" class="form-check-input select-cart-item-checkbox" attr-checked='(item.Enabled, "checked")' />
             </div>
             @* Image *@
             <div class="cart-item-img col-3@(disabledClass)" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()">
