--- a/src/Smartstore.Web/Views/ShoppingCart/Cart.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Cart.cshtml
@@ -7,6 +7,8 @@
     Assets.BodyAttributes.AppendCssClass("order-summary-page no-offcanvas-cart");
     Assets.AppendTitleParts(T("PageTitle.ShoppingCart").Value);
     Assets.AddMetaRobots();
+
+    var cartItemSelectionLink = ViewBag.CartItemSelectionLink as string;
 }
 
 <widget target-zone="order_progress">
@@ -16,6 +18,9 @@
 <div class="page shopping-cart-page">
     <div class="page-title">
         <h1 class="h3 mb-0">@T("ShoppingCart")</h1>
+        <div sm-if="cartItemSelectionLink.HasValue()" id="SelectAllCartItems" class="mt-1">
+            @Html.Raw(cartItemSelectionLink)
+        </div>
     </div>
     <div class="page-body">
         @await Component.InvokeAsync("OrderSummary", new { model = Model })
