--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -4,6 +4,8 @@
 
 @{
     var hasItems = Model.Items.Any();
+    var checkoutAllowed = hasItems && (Model.Items.Any(x => x.Enabled) || !Model.AllowCartItemsToBeDisabled);
+
     var paymentButtons = hasItems
         ? (await Model.ButtonPaymentMethods.Items
             .SelectAwait(x => x.InvokeAsync(ViewContext))
@@ -47,77 +49,80 @@
                     </div>
                 </div>
                 @* Cart Summary *@
-                <div class="col-lg-5 col-xl-4">
-                    <div class="cart-footer">
-                        <div class="row">
-                            <div class="col-12 cart-footer-group">
-                                @if (Model.IsEditable)
-                                {
-                                    <partial name="_CheckoutAttributes" model="Model.CheckoutAttributes" view-data="new ViewDataDictionary(ViewData)" />
-                                }
+            <div class="col-lg-5 col-xl-4">
+                <div id="cart-select-products-warning" class="alert alert-warning@(checkoutAllowed ? " d-none" : string.Empty)">
+                    @T("ShoppingCart.SelectAtLeastOneProduct")
+                </div>
+                <div id="cart-summary-container" class="cart-footer@(checkoutAllowed ? string.Empty : " d-none")">
+                    <div class="row">
+                        <div class="col-12 cart-footer-group">
+                            @if (Model.IsEditable)
+                            {
+                                <partial name="_CheckoutAttributes" model="Model.CheckoutAttributes" view-data="new ViewDataDictionary(ViewData)" />
+                            }
 
-                                <zone name="order_summary_totals_before" />
+                            <zone name="order_summary_totals_before" />
 
-                                <div id="order-totals">
-                                    @await Component.InvokeAsync("OrderTotals", new { isEditable = Model.IsEditable })
+                            <div id="order-totals">
+                                @await Component.InvokeAsync("OrderTotals", new { isEditable = Model.IsEditable })
+                            </div>
+
+                            <zone name="order_summary_totals_after" />
+                        </div>
+                        <div class="col-12 cart-footer-group" sm-suppress-if-empty>
+                            @if (Model.IsEditable)
+                            {
+                                <zone name="order_summary_actions_before" />
+
+                                <partial name="_DiscountBox" model="Model.DiscountBox" />
+                                <partial name="_GiftCardBox" model="Model.GiftCardBox" />
+                                <partial name="_RewardPointsBox" model="Model.RewardPoints" />
+                                <partial name="EstimateShipping" model="Model.EstimateShipping" />
+
+                                <zone name="order_summary_actions_after" />
+                            }
+                            else
+                            {
+                                <div sm-if="Model.CheckoutAttributeInfo.HasValue()" class="selected-checkout-attributes">
+                                    @Html.Raw(Model.CheckoutAttributeInfo)
                                 </div>
+                            }
+                        </div>
 
-                                <zone name="order_summary_totals_after" />
-                            </div>
-                            <div class="col-12 cart-actions cart-footer-group" sm-suppress-if-empty>
-                                @if (Model.IsEditable)
-                                {
-                                    <zone name="order_summary_actions_before" />
+                        <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
+                            <div sm-if="Model.IsEditable" class="col-12 mt-3 cart-footer-actions">
+                                <zone name="order_summary_buttons_before" />
 
-                                    <partial name="_DiscountBox" model="Model.DiscountBox" />
-                                    <partial name="_GiftCardBox" model="Model.GiftCardBox" />
-                                    <partial name="_RewardPointsBox" model="Model.RewardPoints" />
-                                    <partial name="EstimateShipping" model="Model.EstimateShipping" />
-
-                                    <zone name="order_summary_actions_after" />
-                                }
-                                else
-                                {
-                                    <div sm-if="Model.CheckoutAttributeInfo.HasValue()" class="selected-checkout-attributes">
-                                        @Html.Raw(Model.CheckoutAttributeInfo)
-                                    </div>
-                                }
-                            </div>
-
-                            <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
-                                <div sm-if="Model.IsEditable" class="col-12 mt-3 cart-footer-actions">
-                                    <zone name="order_summary_buttons_before" />
-
-                                    <div class="cart-buttons">
-                                        <div id="start-checkout-buttons" class="d-flex flex-column row-gap-2">
-                                            <div class="checkout-buttons">
-                                                <input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" class="d-none" />
-                                                <button type="button" id="checkout" name="checkout" class="btn btn-primary btn-lg btn-block btn-checkout">
-                                                    <span>@T("Checkout.Button")</span>
-                                                    <i class="fa fa-angle-right"></i>
-                                                </button>
-                                            </div>
-                                            <div sm-if="paymentButtons.Any()" class="addon-buttons">
-                                                <div class="d-flex flex-column row-gap-2">
-                                                    <div class="text-center">
-                                                        <span>@T("ShoppingCart.AlternativePaymentButtons")</span>
-                                                    </div>
-                                                    @*Payment method buttons (e.g. Paypal, Amazon Pay)*@
-                                                    @foreach (var button in paymentButtons)
-                                                    {
-                                                        @button
-                                                    }
+                                <div class="cart-buttons">
+                                    <div id="start-checkout-buttons" class="d-flex flex-column row-gap-2">
+                                        <div class="checkout-buttons">
+                                            <input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" class="d-none" />
+                                            <button type="button" id="checkout" name="checkout" class="btn btn-primary btn-lg btn-block btn-checkout">
+                                                <span>@T("Checkout.Button")</span>
+                                                <i class="fa fa-angle-right"></i>
+                                            </button>
+                                        </div>
+                                        <div sm-if="paymentButtons.Any()" class="addon-buttons">
+                                            <div class="d-flex flex-column row-gap-2">
+                                                <div class="text-center">
+                                                    <span>@T("ShoppingCart.AlternativePaymentButtons")</span>
                                                 </div>
+                                                @*Payment method buttons (e.g. Paypal, Amazon Pay)*@
+                                                @foreach (var button in paymentButtons)
+                                                {
+                                                    @button
+                                                }
                                             </div>
                                         </div>
                                     </div>
-
-                                    <zone name="order_summary_buttons_after" />
                                 </div>
-                            </zone>
-                        </div>
+
+                                <zone name="order_summary_buttons_after" />
+                            </div>
+                        </zone>
                     </div>
                 </div>
+            </div>
 
                 @* Back Button *@
                 <div sm-if="Model.IsEditable" class="col-12 col-md-6 col-lg-7 col-xl-4 col-xxl-3 my-3">
