--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
@@ -110,7 +110,7 @@
                             <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
                                href="#"
                                rel="nofollow"
-                               data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, isWishlistItem = true })'
+                               data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, isWishlist = true })'
                                data-name="@item.ProductName"
                                data-type="wishlist"
                                data-action="remove"
