--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -15,7 +15,7 @@
 @for (var i = 0; i < bundleItems.Length; i++)
 {
     var item = bundleItems[i];
-    var disabledClass = item.Enabled ? string.Empty : " cart-item-disabled";
+    var disabledClass = !item.Enabled && parentModel.AllowCartItemsToBeDisabled ? " cart-item-disabled" : string.Empty;
 
     <div class="cart-row cart-row-child" data-key="@item.Id" data-parent-key="@item.BundleItem.ParentItemId">
         <div class="row">
