--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -75,7 +75,7 @@
                             size = ControlSize.Small,
                             htmlAttributes = new
                             {
-                                data_href = Url.Action("UpdateCartItem", "ShoppingCart", new { sciItemId = item.Id, isCartPage = true }),
+                                data_href = Url.Action("UpdateCartItem", "ShoppingCart", new { cartItemId = item.Id, isCartPage = true }),
                                 data_sci_item = item.Id,
                                 id = $"itemquantity{item.Id}",
                                 name = $"itemquantity{item.Id}"
