--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -15,16 +15,16 @@
 @for (var i = 0; i < bundleItems.Length; i++)
 {
     var item = bundleItems[i];
-    var disabledClass = !item.Enabled && parentModel.AllowCartItemsToBeDisabled ? " cart-item-disabled" : string.Empty;
-
-    <div class="cart-row cart-row-child" data-key="@item.Id" data-parent-key="@item.BundleItem.ParentItemId">
+    <div class="cart-row cart-row-child@(!item.Enabled && parentModel.AllowCartItemsToBeDisabled ? " cart-item-disabled" : string.Empty)"
+         data-key="@item.Id" 
+         data-parent-key="@item.BundleItem.ParentItemId">
         <div class="row">
             <div sm-if="parentModel.AllowCartItemsToBeDisabled && parentModel.IsEditable" class="select-cart-item col-auto invisible">
                 <input type="checkbox" class="form-check-input select-cart-item-checkbox" />
             </div>
 
             @* Spacer for image *@
-            <div class="cart-item-img col-3 d-md-flex d-lg-none d-xl-flex text-start@(disabledClass)">
+            <div class="cart-item-img col-3 d-md-flex d-lg-none d-xl-flex text-start">
                 @if (i == 0 && item.BundleItem.Title.HasValue())
                 {
                     <span class="fwm pt-1">@(item.BundleItem.Title):</span>
@@ -34,7 +34,7 @@
                     <span>&nbsp;</span>
                 }
             </div>
-            <div class="cart-item-data col@(disabledClass)">
+            <div class="cart-item-data col">
                 @* Title & Description *@
                 <div class="cart-item-group">
                     <div class="cart-item-title">
