--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -11,24 +11,23 @@
 
 @foreach (var item in Model.Items)
 {
-    var disabledClass = !item.Enabled && Model.AllowCartItemsToBeDisabled ? " cart-item-disabled" : string.Empty;
-    <div class="cart-row" data-key="@item.Id" data-parent-key="@item.Id">
+    <div class="cart-row@(!item.Enabled && Model.AllowCartItemsToBeDisabled ? " cart-item-disabled" : string.Empty)" data-key="@item.Id" data-parent-key="@item.Id">
         <div class="row">
             <div sm-if="Model.AllowCartItemsToBeDisabled && Model.IsEditable" class="select-cart-item col-auto">
                 <input name="SelectCartItem@(item.Id)" type="checkbox" class="form-check-input select-cart-item-checkbox" attr-checked='(item.Enabled, "checked")' />
             </div>
             @* Image *@
-            <div class="cart-item-img col-3@(disabledClass)" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()">
+            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3">
                 <img sm-model="item.Image" class="img-fluid" />
             </div>
 
             @* Data *@
-            <div class="cart-item-data col@(disabledClass)">
+            <div class="cart-item-data col">
                 <partial name="CartItem.Details" model="item" view-data="parentViewData" />
 
                 @* User Agreement & ESD *@
-                <div sm-if="!Model.IsEditable && ((item.IsDownload && item.HasUserAgreement) || (Model.DisplayEsdRevocationWaiverBox && item.IsEsd))" 
-                     class="alert alert-warning cart-item-group">
+                <div sm-if="!Model.IsEditable && ((item.IsDownload && item.HasUserAgreement) || (Model.DisplayEsdRevocationWaiverBox && item.IsEsd))"
+                        class="alert alert-warning cart-item-group">
                     <div sm-if="item.IsDownload && item.HasUserAgreement" class="download-agreement form-check">
                         <input type="checkbox" id="AgreeUserAgreement@(item.ProductId)" name="AgreeUserAgreement@(item.ProductId)" class="form-check-input" />
                         <label class="form-check-label" for="AgreeUserAgreement@(item.ProductId)">
