--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -15,11 +15,11 @@
 @for (var i = 0; i < bundleItems.Length; i++)
 {
     var item = bundleItems[i];
-    <div class="cart-row cart-row-child@(!item.Enabled && parentModel.AllowCartItemsToBeDisabled ? " cart-item-disabled" : string.Empty)"
+    <div class="cart-row cart-row-child@(!item.Active ? " cart-item-deactivated" : string.Empty)"
          data-key="@item.Id" 
          data-parent-key="@item.BundleItem.ParentItemId">
         <div class="row">
-            <div sm-if="parentModel.AllowCartItemsToBeDisabled && parentModel.IsEditable" class="select-cart-item col-auto invisible">
+            <div sm-if="parentModel.AllowToDeactivateCartItems && parentModel.IsEditable" class="select-cart-item col-auto invisible">
                 <input type="checkbox" class="form-check-input select-cart-item-checkbox" />
             </div>
 
