--- a/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
@@ -1,4 +1,6 @@
-﻿@model CategoryModel
+﻿@using Smartstore.Core.Content.Media
+
+@model CategoryModel
 
 @{
     var parentCategoryBreadcrumb = (string)ViewBag.ParentCategoryBreadcrumb;
@@ -170,7 +172,13 @@
                         <smart-label asp-for="Description" />
 			        </div>
                     <div class="adminData wide">
-                        <editor asp-for="Description" />
+                        <ai-rich-text-creation asp-for="Description"
+                                               entity-name="@Model.Name"
+                                               entity-type="Category"
+                                               display-image-options="false"
+                                               display-structure-options="false">
+                            <editor asp-for="Description" />
+                        </ai-rich-text-creation>
                         <span asp-validation-for="Description"></span>
                     </div>
 		        </div>
@@ -179,7 +187,14 @@
                         <smart-label asp-for="BottomDescription" />
 			        </div>
                     <div class="adminData wide">
-                        <editor asp-for="BottomDescription" />
+                        <ai-rich-text-creation asp-for="BottomDescription"
+                                               entity-name="@Model.Name"
+                                               entity-type="Category"
+                                               entity-id="@Model.Id"
+                                               display-structure-options="false"
+                                               display-image-options="false">
+                            <editor asp-for="BottomDescription" />
+                        </ai-rich-text-creation>
                         <span asp-validation-for="BottomDescription"></span>
                     </div>
 		        </div>
@@ -221,11 +236,17 @@
                     <smart-label asp-for="PictureId" />
                 </div>
                 <div class="adminData">
-                    <editor asp-for="PictureId" />
+                    <ai-image-creation asp-for="PictureId" 
+                                       entity-name="@Model.Name" 
+                                       entity-type="Category"
+                                       format="Square"
+                                       media-folder="@SystemAlbumProvider.Catalog">
+                        <editor asp-for="PictureId" />
+                    </ai-image-creation>
                     <span asp-validation-for="PictureId"></span>
                 </div>
             </div>
-            <div class="adminRow">
+            <div class="adminRow">  
                 <div class="adminSeparator"><hr /></div>
             </div>
             <div class="adminRow">
@@ -402,33 +423,51 @@
         ,
 	    @<text>
             <div class="adminContent">
-		        <div class="adminRow">
-			        <div class="adminTitle">
-				        <smart-label asp-for="MetaTitle" />
-			        </div>
-			        <div class="adminData">
-                        <textarea asp-for="MetaTitle"></textarea>
-				        <span asp-validation-for="MetaTitle"></span>
-			        </div>
-		        </div>
-		        <div class="adminRow">
-			        <div class="adminTitle">
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="MetaTitle" />
+                    </div>
+                    <div class="adminData">
+                        <ai-text-creation asp-for="MetaTitle"
+                                          entity-name="@Model.Name"
+                                          entity-type="Category"
+                                          display-optimization-options="false"
+                                          display-word-limit="false">
+                            <input asp-for="MetaTitle" />
+                        </ai-text-creation>
+                        <span asp-validation-for="MetaTitle"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
                         <smart-label asp-for="MetaDescription" />
-			        </div>
-			        <div class="adminData">
-                        <textarea asp-for="MetaDescription"></textarea>
-				        <span asp-validation-for="MetaDescription"></span>
-			        </div>
-		        </div>
-		        <div class="adminRow">
-			        <div class="adminTitle">
+                    </div>
+                    <div class="adminData">
+                        <ai-text-creation asp-for="MetaDescription"
+                                          entity-name="@Model.Name"
+                                          entity-type="Category"
+                                          display-optimization-options="false"
+                                          display-word-limit="false">
+                            <textarea asp-for="MetaDescription"></textarea>
+                        </ai-text-creation>
+                        <span asp-validation-for="MetaDescription"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
                         <smart-label asp-for="MetaKeywords" />
-			        </div>
-			        <div class="adminData">
-                        <textarea asp-for="MetaKeywords"></textarea>
-				        <span asp-validation-for="MetaKeywords"></span>
-			        </div>
-		        </div>
+                    </div>
+                    <div class="adminData">
+                        <ai-text-creation asp-for="MetaKeywords"
+                                          entity-name="@Model.Name"
+                                          entity-type="Category"
+                                          display-optimization-options="false"
+                                          display-word-limit="false">
+                            <input asp-for="MetaKeywords" />
+                        </ai-text-creation>
+                        <span asp-validation-for="MetaKeywords"></span>
+                    </div>
+                </div>
 		        <div class="adminRow">
 			        <div class="adminTitle">
                         <smart-label asp-for="SeName" />
