--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -1688,3 +1688,15 @@ a.editable {
     transform: rotate(90deg) translateX(100%);
     transform-origin: right top;
 }
+
+// AI dropdown
+// --------------------------------------------------------------
+
+.cnt-ai-dialog-opener {
+    display: block !important;
+}
+
+.ai-dialog-opener {
+    pointer-events: initial !important;
+    height: auto !important;
+}
