--- a/src/Smartstore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Confirm.cshtml
@@ -6,7 +6,7 @@
 @{
     Layout = "_Checkout";
     Assets.AppendTitleParts(T("PageTitle.Checkout.Confirm"));
-    Assets.BodyAttributes.AppendCssClass("no-offcanvas-cart");
+    Assets.BodyAttributes.AppendCssClass("no-offcanvas-cart no-hidden-overflow");
     Assets.AddMetaRobots();
 
     var termsLinkTemplate = "<a class='terms-trigger read' href='{0}' data-toggle='modal' data-target='#terms-of-service-modal'>";
