Disabled cart items: testing

--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
@@ -10,7 +10,7 @@
     <tr id="CartSummarySubtotal" class="cart-summary-subtotal"
         data-subtotal-converted="@RoundingHelper.Round(Model.SubTotal).ToStringInvariant()"
         data-subtotal="@(Model.CartSubtotal != null ? RoundingHelper.Round(Model.CartSubtotal.SubtotalWithoutDiscount).ToStringInvariant() : string.Empty)">
-        <td class="cart-summary-label">@Html.Raw(Model.SubtotalLabel):</td>
+        <td class="cart-summary-label">@Html.Raw(Model.SubtotalLabel ?? T("ShoppingCart.Totals.SubTotal")):</td>
         <td class="cart-summary-value">@Model.SubTotal</td>
     </tr>
     <tr sm-if="Model.DisplayWeight" class="cart-summary-weight">
