--- a/src/Smartstore.Web/Views/Order/Details.cshtml
+++ b/src/Smartstore.Web/Views/Order/Details.cshtml
@@ -5,7 +5,7 @@
 
 @{
     Assets.AppendTitleParts(T("PageTitle.OrderDetails"));
-    Assets.BodyAttributes.AppendCssClass("no-hidden-overflow");
+    Assets.BodyAttributes.AppendCssClass("content-overflow-initial");
 
     var bundleItemThumbSize = Math.Min(Model.BundleThumbSize, 60);
     var hasOrderDetails1 = Model.BillingAddress != null || (Model.IsShippable && Model.ShippingAddress != null);
