#1059 Avoid unnecessary whitespace in product lists if no delivery time is displayed at all

--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Delivery.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Delivery.cshtml
@@ -10,7 +10,7 @@
     }
 }
 
-<div class="art-delivery-info">
+<div sm-if="Model.Parent.DeliveryTimesPresentation != DeliveryTimesPresentation.None" class="art-delivery-info">
     @if (Model.IsShippingEnabled && delivery.ShowDeliveryTime)
     {
         if (delivery.StatusLabel.HasValue())
