--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -13,10 +13,10 @@
 {
     <div class="cart-row@(!item.Active ? " cart-item-inactive" : string.Empty)" data-key="@item.Id" data-parent-key="@item.Id">
         <div class="row">
-            @* TODO: (mg) Center checkbox vertically at >=md *@
-            @* TODO: (mg) Checkbox color should be --gray-700 (overwrite CSS vars) *@
-            <div sm-if="Model.AllowToDeactivateCartItems && Model.IsEditable" class="select-cart-item col-auto">
-                <input name="SelectCartItem@(item.Id)" type="checkbox" class="form-check-input select-cart-item-checkbox" attr-checked='(item.Active, "checked")' />
+            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto d-flex">
+                <input name="SelectCartItem@(item.Id)" type="checkbox" 
+                       class="form-check-input select-cart-item-checkbox align-self-md-center" 
+                       attr-checked='(item.Active, "checked")' />
             </div>
             @* Image *@
             <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3">
