Activatable cart items review

--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -19,8 +19,8 @@
          data-key="@item.Id" 
          data-parent-key="@item.BundleItem.ParentItemId">
         <div class="row">
-            <div sm-if="parentModel.AllowActivatableCartItems && parentModel.IsEditable" class="select-cart-item col-auto d-flex invisible">
-                <input type="checkbox" class="form-check-input select-cart-item-checkbox align-self-md-center" />
+            <div sm-if="parentModel.AllowActivatableCartItems && parentModel.IsEditable" class="select-cart-item col-auto invisible">
+                <input type="checkbox" class="form-check-input select-cart-item-checkbox" />
             </div>
 
             @* Spacer for image *@
