--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -13,9 +13,9 @@
 {
     <div class="cart-row@(!item.Active ? " cart-item-inactive" : string.Empty)" data-key="@item.Id" data-parent-key="@item.Id">
         <div class="row">
-            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto d-flex">
+            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto">
                 <input name="SelectCartItem@(item.Id)" type="checkbox" 
-                       class="form-check-input select-cart-item-checkbox align-self-md-center" 
+                       class="form-check-input select-cart-item-checkbox" 
                        attr-checked='(item.Active, "checked")' />
             </div>
             @* Image *@
